# clawwrap

./: LICENSE  README.md  alembic.ini  pyproject.toml
examples/openclaw/: canonical_target_resolution_policy.yaml  dispatch_inbound_event.yaml  resolve_group.yaml  send_group_message_verified.yaml  verify_group_identity.yaml
extensions/clawwrap/: index.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py
specs/hosts/: openclaw.yaml
specs/legacy/: medical-screening.yaml  participant-prep.yaml  post-call-whatsapp.yaml  whatsapp-group-indexer.yaml
specs/policies/: approval-requirements.yaml  canonical-target-resolution.yaml  identity-verification.yaml  outbound-audit.yaml
specs/wrappers/: dispatch-inbound-event.yaml  outbound-gate.yaml  resolve-group.yaml  send-dm-test.yaml  send-group-message-verified.yaml  verify-group-identity.yaml
src/clawwrap/: __main__.py
src/clawwrap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/contract/: test_handler_contracts.py
tests/e2e/: conftest.py  test_email_loopback.py  test_outbound_gate.py  test_whatsapp_loopback.py
tests/fixtures/: gateway.json
tests/gate/: test_doppler_resolution.py  test_sms_dispatch.py
tests/integration/: test_adapter_openclaw.py  test_channel_bluebubbles_integration.py  test_run_lifecycle.py  test_store.py
tests/unit/: test_approval.py  test_channel_bluebubbles.py  test_channel_whatsapp.py  test_cli_apply.py  test_config_yaml.py  test_conformance.py  test_dag.py  test_dm_send_gateway.py  test_email_list_fanout.py  (+17 more)
(+76 files in other folders)
